# Community-Lottery-Winners

./: README.md  main.py  pyproject.toml
chrome-extensions/: content.js  manifest.json
chrome-extensions/modules/: background.js  download-button.js
chrome-extensions/utils/: dom-utils.js
